# lingua

./: .gitattributes  .gitignore  ASR_WHISPER_IMPLEMENTATION_PLAN.md  Emotion_Adapter_Spec.md  KV_CACHE_OPTIMIZATION_PLANS.md  MARIAN_ZH_EN_IR9_EXPORT_GUIDE.md  MARIAN_ZH_EN_IR9_EXPORT_PLAN.md  MARIAN_ZH_EN_IR9_EXPORT_PLAN_v2.md  PIPER_HTTP_TTS_INTEGRATION_PLAN.md  PIPER_TTS_PC_LOCAL_AND_MOBILE_ONLINE_PLAN_FULL.md  PROJECT_PROGRESS.md  README.md  SPEAKER_RECOGNITION_STARTUP_GUIDE.md  TASK_CHECKLIST.md  check_core_engine.ps1  check_tts_in_wsl.ps1  check_tts_service.ps1  config.toml  export_marian_decoder_ir9.py  export_marian_decoder_ir9_fixed.py  export_marian_encoder_ir9.py  export_marian_ir9.py  fix_port_forwarding.ps1  full_translation_step3_fix.md  full_translation_step3_kv_workaround.md  git_add_safe.ps1  hf_token&ubuntu  kv_cache_fix_plan_v2.md  kv_cache_fix_step2.md  layer4_implementation_guide.md  layer4_task_plan.md  lingua_core_config.toml  lingua_requirements_all.docx  lingua_requirements_grouped.docx  lingua_v1.0_doc.docx  marian_nmt_interface_spec.md  nmt_onnx_file_mode_guide.md  package-lock.json  package.json  quick_check_tts.ps1  (+12 more)
core/engine/: ASR_VS_SPEAKER_IDENTIFICATION_EXPLANATION.md  BUG_FIXES.md  CHECK_PYTHON_VERSION.md  CONNECTION_RESET_ERROR_FIX.md  CONNECTION_RESET_ERROR_FIX_SUMMARY.md  CONTINUE_INSTALL.md  CONTINUOUS_STREAMING_DELAY_ANALYSIS.md  CONTINUOUS_STREAMING_OPTIMIZATION.md  Cargo.toml  DEPENDENCY_IMPACT_ANALYSIS.md  ENSURE_PYTHON310_SETUP.md  ENVIRONMENT_SETUP_GUIDE.md  FIND_PYTHON310.md  FIXES_APPLIED.md  FIX_CONDA_BASE_ENV.md  FIX_CONDA_ENV.md  FIX_HUGGINGFACE_HUB.md  FIX_YOURTTS_ENVIRONMENT.md  IMPLEMENTATION_COMPARISON_REPORT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL_COMPATIBLE_VERSIONS.md  INSTALL_DEPENDENCIES.md  INSTALL_PYTHON310.md  INSTALL_TTS_LIBRARY.md  INSTALL_UBUNTU_2204.md  INTEGRATION_TEST_SUMMARY.md  LIBROSA_VERSION_FIX.md  MISSING_DEPENDENCIES.md  MODEL_DOWNLOAD_GUIDE.md  NUMPY_VERSION_CONFLICT.md  ONNX_RUNTIME_VERSION_FIX.md  PARALLEL_SEGMENTS_IMPLEMENTATION.md  PIPER_TTS_ENVIRONMENT_STATUS.md  PYTHON310_DEPENDENCIES_FIX.md  PYTHON312_NUMPY_FIX.md  QUICK_FIX.md  README_ASR_TEST.md  SERVICE_STARTUP_FIXED.md  SERVICE_STARTUP_GUIDE.md  (+47 more)
core/engine/.cargo/: config.toml
core/engine/config/: asr_filters.json
core/engine/docs/: ASR_FASTER_WHISPER_MIGRATION.md  ASR_FASTER_WHISPER_MIGRATION_GUIDE.md  ASR_WHISPER_NEXT_STEPS.md  ASR_WHISPER_P0_TASKS_SUMMARY.md  ASR_WHISPER_PROGRESS_REPORT.md  ASR_WHISPER_REMAINING_TASKS.md  ASR_WHISPER_STEP1_1_SUMMARY.md  ASR_WHISPER_STEP1_2_SUMMARY.md  ASR_WHISPER_STEP2_2_SUMMARY.md  ASR_WHISPER_STEP2_3_SUMMARY.md  ASR_WHISPER_STEP3_2_SUMMARY.md  ASR_WHISPER_STEP3_3_SUMMARY.md  ASR_WHISPER_STEP5_1_SUMMARY.md  ASR_WHISPER_TEST_SCRIPT.md  BREEZE2_VITS_ISSUE_SUMMARY.md  BUSINESS_FLOW_TEST_REPORT.md  COMPLETED_FUNCTIONALITY_SUMMARY.md  (+61 more)
(+560 files in other folders)
