[package]
name = "lingua-core-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "core_engine"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

anyhow = "1"
ort = { version = "2.0.0-rc.10", default-features = false, features = ["download-binaries"] }

ndarray = "0.16"