[package]
name = "lingua-core-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "core_engine"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "rt", "time"] }

anyhow = "1"
ort = { version = "1.16.3", default-features = false, features = ["download-binaries"] }

ndarray = "0.15"

# Whisper ASR 支持
whisper-rs = "0.15.1"
hound = "3.5"  # WAV 文件读取

# Tokenizer 支持（用于 Emotion XLM-R）
tokenizers = "0.15"

# HTTP 客户端（用于 Piper TTS）
reqwest = { version = "0.11", features = ["json"] }

# Patch esaxx-rs to use dynamic CRT (/MD) instead of static CRT (/MT)
# This fixes the linker error: RuntimeLibrary mismatch between MD_DynamicRelease and MT_StaticRelease
[patch.crates-io]
esaxx-rs = { path = "../../third_party/esaxx-rs" }
