[package]
name = "lingua-core-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "core_engine"
path = "src/lib.rs"

[[bin]]
name = "core_engine"
path = "src/bin/core_engine.rs"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "rt", "time", "process"] }
futures = "0.3"
futures-util = "0.3"

anyhow = "1"
ort = { version = "1.16.3", default-features = false, features = ["download-binaries"] }

ndarray = "0.15"

# Whisper ASR 支持（启用 CUDA GPU 加速）
whisper-rs = { version = "0.15.1", features = ["cuda"] }
hound = "3.5"  # WAV 文件读取

# Tokenizer 支持（用于 Emotion XLM-R）
tokenizers = "0.15"

# HTTP 客户端（用于 Piper TTS）
reqwest = { version = "0.11", features = ["json"] }

# UUID 生成（用于性能日志）
uuid = { version = "1.0", features = ["v4"] }

# HTTP 服务器（用于 CoreEngine Service）
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-tungstenite = "0.21"
base64 = { version = "0.21", features = ["alloc"] }
toml = "0.8"

# 临时文件（用于测试）
[dev-dependencies]
tempfile = "3"

# Patch esaxx-rs to use dynamic CRT (/MD) instead of static CRT (/MT)
# This fixes the linker error: RuntimeLibrary mismatch between MD_DynamicRelease and MT_StaticRelease
[patch.crates-io]
esaxx-rs = { path = "../../third_party/esaxx-rs" }
